Closed Bug 1988625 Opened 11 months ago Closed 10 months ago

Vendor NSS FIPS Interface not accessible through FC_GetInterface

Categories

(NSS :: Libraries, defect)

defect

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: joachim.vandersmissen, Unassigned)

Details

Attachments

(1 file)

User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:142.0) Gecko/20100101 Firefox/142.0

Steps to reproduce:

CK_INTERFACE_PTR fips_interface;
FC_GetInterface((CK_UTF8CHAR_PTR)"Vendor NSS FIPS Interface", NULL, &fips_interface, 0);

Actual results:

crv = 00000007 (CKR_ARGUMENTS_BAD)`

Expected results:

CKR_OK

Pushed by rrelyea@redhat.com:
https://hg.mozilla.org/projects/nss/rev/74bf8b59802d
Align FIPS interfaces count with array r=rrelyea

Status: UNCONFIRMED → RESOLVED
Closed: 10 months ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: