Bug 1988625 - Align FIPS interfaces count with array r=rrelyea

User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:142.0) Gecko/20100101 Firefox/142.0

Steps to reproduce:

CK_INTERFACE_PTR fips_interface;
FC_GetInterface((CK_UTF8CHAR_PTR)"Vendor NSS FIPS Interface", NULL, &fips_interface, 0);

Actual results:

crv = 00000007 (CKR_ARGUMENTS_BAD)`

Expected results:

CKR_OK

Differential Revision: https://phabricator.services.mozilla.com/D264882